@@ -32,7 +32,9 @@
 
     <name>Gravitee.io - llamaj.cpp</name>
     <url>https://github.com/gravitee-io/llamaj.cpp</url>
-    <description>Llamaj.cpp (contraction of llama.cpp and java/jextract) is a port of llama.cpp in the JVM using jextract.</description>
+    <description>Llamaj.cpp (contraction of llama.cpp and java/jextract) is a port of llama.cpp in the JVM using
+        jextract.
+    </description>
 
     <scm>
         <url>https://github.com/gravitee-io/llamaj.cpp</url>
@@ -42,11 +44,12 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.release>25</maven.compiler.release>
         <junit-jupiter-api.version>6.0.2</junit-jupiter-api.version>
         <assertj-core.version>3.27.7</assertj-core.version>
         <llama.cpp.version>b7943</llama.cpp.version>
         <llama.cpp.dir>${project.basedir}/../llama.cpp</llama.cpp.dir>
-        <jextract.dir>${project.basedir}/../jextract/bin</jextract.dir>
+        <jextract.dir>${project.basedir}/.jextract/bin</jextract.dir>
     </properties>
 
     <profiles>
@@ -59,6 +62,25 @@
                         <artifactId>exec-maven-plugin</artifactId>
                         <version>3.6.3</version>
                         <executions>
+                            <!-- Download jextract before generating sources for Linux -->
+                            <execution>
+                                <id>download-jextract-linux</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>scripts/download-jextract.sh</executable>
+                                    <arguments>
+                                        <argument>-o</argument>
+                                        <argument>linux</argument>
+                                        <argument>-p</argument>
+                                        <argument>x86_64</argument>
+                                        <argument>-d</argument>
+                                        <argument>${project.basedir}/.jextract</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
                             <execution>
                                 <id>download-llama.cpp-shared-objects</id>
                                 <phase>generate-sources</phase>
@@ -86,17 +108,64 @@
                                     <goal>exec</goal>
                                 </goals>
                                 <configuration>
-                                    <executable>${jextract.dir}/jextract</executable>
+                                    <executable>${project.basedir}/.jextract/bin/jextract</executable>
                                     <arguments>
                                         <argument>-t</argument>
                                         <argument>io.gravitee.llama.cpp.linux.x86_64</argument>
-                                        <argument>--source</argument>
                                         <argument>--include-dir</argument>
                                         <argument>${llama.cpp.dir}/ggml/include</argument>
+                                        <argument>--include-dir</argument>
+                                        <argument>${llama.cpp.dir}/include</argument>
                                         <argument>--output</argument>
                                         <argument>${project.build.directory}/generated-sources</argument>
+                                        <argument>--header-class-name</argument>
+                                        <argument>llama_h</argument>
+                                        <argument>${llama.cpp.dir}/tools/mtmd/mtmd.h</argument>
+                                        <argument>${llama.cpp.dir}/tools/mtmd/mtmd-helper.h</argument>
                                         <argument>${llama.cpp.dir}/include/llama.h</argument>
                                     </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>com.google.code.maven-replacer-plugin</groupId>
+                        <artifactId>replacer</artifactId>
+                        <version>1.5.3</version>
+                        <executions>
+                            <execution>
+                                <id>fix-ggml-layout-linux</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>replace</goal>
+                                </goals>
+                                <configuration>
+                                    <file>${project.build.directory}/generated-sources/io/gravitee/llama/cpp/linux/x86_64/llama_h.java</file>
+                                    <replacements>
+                                        <replacement>
+                                            <token>ggml_backend_graph_copy\.layout\(\)</token>
+                                            <value>io.gravitee.llama.cpp.linux.x86_64.ggml_backend_graph_copy.layout()</value>
+                                        </replacement>
+                                    </replacements>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>fix-visibility-llama_h_1-linux</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>replace</goal>
+                                </goals>
+                                <configuration>
+                                    <file>${project.build.directory}/generated-sources/io/gravitee/llama/cpp/linux/x86_64/llama_h_1.java</file>
+                                    <replacements>
+                                        <replacement>
+                                            <token>^class llama_h_1 extends</token>
+                                            <value>public class llama_h_1 extends</value>
+                                        </replacement>
+                                    </replacements>
+                                    <regex>true</regex>
+                                    <regexFlags>MULTILINE</regexFlags>
+                                    <quiet>true</quiet>
                                 </configuration>
                             </execution>
                         </executions>
@@ -113,6 +182,25 @@
                         <artifactId>exec-maven-plugin</artifactId>
                         <version>3.6.3</version>
                         <executions>
+                            <!-- Download jextract before generating sources for macOS -->
+                            <execution>
+                                <id>download-jextract-macos</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>scripts/download-jextract.sh</executable>
+                                    <arguments>
+                                        <argument>-o</argument>
+                                        <argument>macosx</argument>
+                                        <argument>-p</argument>
+                                        <argument>aarch64</argument>
+                                        <argument>-d</argument>
+                                        <argument>${project.basedir}/.jextract</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
                             <execution>
                                 <id>download-llama.cpp-dylibs</id>
                                 <phase>generate-sources</phase>
@@ -127,7 +215,7 @@
                                         <argument>-p</argument>
                                         <argument>aarch64</argument>
                                         <argument>-v</argument>
-                                        <argument>${llama.cpp.version}</argument>mv
+                                        <argument>${llama.cpp.version}</argument>
                                         <argument>-d</argument>
                                         <argument>${project.basedir}/src/main/resources</argument>
                                     </arguments>
@@ -140,17 +228,81 @@
                                     <goal>exec</goal>
                                 </goals>
                                 <configuration>
-                                    <executable>${jextract.dir}/jextract</executable>
+                                    <executable>${project.basedir}/.jextract/bin/jextract</executable>
                                     <arguments>
                                         <argument>-t</argument>
                                         <argument>io.gravitee.llama.cpp.macosx.aarch64</argument>
-                                        <argument>--source</argument>
                                         <argument>--include-dir</argument>
                                         <argument>${llama.cpp.dir}/ggml/include</argument>
+                                        <argument>--include-dir</argument>
+                                        <argument>${llama.cpp.dir}/include</argument>
                                         <argument>--output</argument>
                                         <argument>${project.build.directory}/generated-sources</argument>
+                                        <argument>--header-class-name</argument>
+                                        <argument>llama_h</argument>
+                                        <argument>${llama.cpp.dir}/tools/mtmd/mtmd.h</argument>
+                                        <argument>${llama.cpp.dir}/tools/mtmd/mtmd-helper.h</argument>
                                         <argument>${llama.cpp.dir}/include/llama.h</argument>
                                     </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>com.google.code.maven-replacer-plugin</groupId>
+                        <artifactId>replacer</artifactId>
+                        <version>1.5.3</version>
+                        <executions>
+                            <execution>
+                                <id>fix-ggml-layout-macos</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>replace</goal>
+                                </goals>
+                                <configuration>
+                                    <file>${project.build.directory}/generated-sources/io/gravitee/llama/cpp/macosx/aarch64/llama_h_1.java</file>
+                                    <replacements>
+                                        <replacement>
+                                            <token>ggml_backend_graph_copy\.layout\(\)</token>
+                                            <value>io.gravitee.llama.cpp.macosx.aarch64.ggml_backend_graph_copy.layout()</value>
+                                        </replacement>
+                                    </replacements>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>fix-visibility-llama_h_1-macos</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>replace</goal>
+                                </goals>
+                                <configuration>
+                                    <file>${project.build.directory}/generated-sources/io/gravitee/llama/cpp/macosx/aarch64/llama_h_1.java</file>
+                                    <replacements>
+                                        <replacement>
+                                            <token>^class llama_h_1 extends</token>
+                                            <value>public class llama_h_1 extends</value>
+                                        </replacement>
+                                    </replacements>
+                                    <regex>true</regex>
+                                    <regexFlags>MULTILINE</regexFlags>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>fix-visibility-llama_h_2-macos</id>
+                                <phase>generate-sources</phase>
+                                <goals>
+                                    <goal>replace</goal>
+                                </goals>
+                                <configuration>
+                                    <file>${project.build.directory}/generated-sources/io/gravitee/llama/cpp/macosx/aarch64/llama_h_2.java</file>
+                                    <replacements>
+                                        <replacement>
+                                            <token>^class llama_h_2 extends</token>
+                                            <value>public class llama_h_2 extends</value>
+                                        </replacement>
+                                    </replacements>
+                                    <regex>true</regex>
+                                    <regexFlags>MULTILINE</regexFlags>
                                 </configuration>
                             </execution>
                         </executions>
@@ -210,6 +362,7 @@
                                 <exclude>README.md</exclude>
                                 <exclude>SECURITY.md</exclude>
                                 <exclude>.gravitee.settings.xml</exclude>
+                                <exclude>.jextract/**</exclude>
                             </excludes>
                         </licenseSet>
                     </licenseSets>
@@ -223,8 +376,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
+                    <source>25</source>
+                    <target>25</target>
                     <compilerArgs>
                         <arg>--enable-preview</arg>
                     </compilerArgs>
@@ -243,9 +396,25 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.4</version>
+                <configuration>
+                    <argLine>--enable-native-access=ALL-UNNAMED</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <source>25</source>
+                    <additionalOptions>--enable-preview</additionalOptions>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.6.1</version>
+                <version>3.5.0</version>
                 <executions>
                     <execution>
                         <id>add-source</id>
@@ -255,48 +424,11 @@
                         </goals>
                         <configuration>
                             <sources>
-                                <source>${project.build.directory}/generated-sources</source>
+                                <source>${project.build.directory}/generated-sources/</source>
                             </sources>
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>com.hubspot.maven.plugins</groupId>
-                <artifactId>prettier-maven-plugin</artifactId>
-                <version>0.22</version>
-                <configuration>
-                    <prettierJavaVersion>2.0.0</prettierJavaVersion>
-                    <printWidth>125</printWidth>
-                    <inputGlobs>
-                        <inputGlob>src/{main,test}/**/*.java</inputGlob>
-                        <inputGlob>.github/*.json</inputGlob>
-                    </inputGlobs>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.5.4</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <configuration>
-                    <source>21</source>
-                    <additionalOptions>--enable-preview</additionalOptions>
-                </configuration>
             </plugin>
         </plugins>
     </build>
